# northrou

./: .gitignore  .goreleaser.yaml  AGENTS.md  Caddyfile  Dockerfile  LICENSE  Makefile  NOTICE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  deploy.yml.example  docker-compose.yml
backend/: go.mod  go.sum
coordination/: Dockerfile  Dockerfile.relay  go.mod  go.sum
docs/: api.md  architecture.md  changelog.md  configuration.md  deploy-coordination.md  frontend.md
frontend/: connect.html  (+9 more)
frontend/plugins/northrou-native/: Cargo.toml  build.rs
frontend/plugins/northrou-native/android/: build.gradle.kts  proguard-rules.pro
frontend/plugins/northrou-native/android/src/main/java/sh/northrou/chrome/: NorthrouNativePlugin.kt
frontend/plugins/northrou-native/android/src/main/java/sh/northrou/native/: NorthrouNativePlugin.kt
frontend/plugins/northrou-native/guest-js/: index.ts
frontend/plugins/northrou-native/ios/: Package.swift
frontend/plugins/northrou-native/ios/Sources/NorthrouNative/: NorthrouNativePlugin.swift
frontend/plugins/northrou-native/permissions/autogenerated/: reference.md
frontend/plugins/northrou-native/permissions/autogenerated/commands/: set_tab.toml  set_tabs.toml  show_chrome.toml
frontend/plugins/northrou-native/permissions/schemas/: schema.json
frontend/plugins/northrou-native/src/: lib.rs
frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
(+279 files in other folders)
