[package]
name = "tauri-plugin-northrou-native"
version = "0.1.0"
description = "Native chrome and player integration for Northrou"
edition = "2021"
rust-version = "1.77"
links = "tauri-plugin-northrou-native"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
